# bank-django

./: conftest.py  pyproject.toml
apps/accounts/: admin.py  apps.py  models.py  urls.py
apps/accounts/domain/: dto.py  interfaces.py  services.py
apps/accounts/infrastructure/: repositories.py  tasks.py
apps/accounts/migrations/: 0001_initial.py  0002_twofacode.py
apps/accounts/presentation/: serializers.py  views.py
apps/assistant/: admin.py  apps.py  models.py  urls.py
apps/assistant/domain/: services.py
apps/assistant/migrations/: 0001_initial.py
apps/assistant/presentation/: views.py
apps/core/: admin.py  apps.py  middleware.py  models.py  urls.py
apps/core/domain/: __init__.py  exceptions.py  interfaces.py  mixins.py  services.py
apps/core/infrastructure/: exception_handler.py  repositories.py
apps/core/migrations/: 0001_initial.py
apps/core/presentation/: views.py
apps/dashboard/: admin.py  apps.py  models.py  urls.py
apps/dashboard/domain/: services.py
apps/dashboard/infrastructure/: repositories.py
apps/dashboard/migrations/: 0001_initial.py
apps/dashboard/presentation/: views.py
apps/rates/: apps.py  models.py  urls.py
apps/rates/domain/: services.py
apps/rates/infrastructure/: tasks.py
apps/rates/migrations/: 0001_initial.py
apps/telegram_bot/: apps.py  bot.py  tasks.py
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
src/: manage.py
src/config/: celery.py  settings.py  urls.py
templates/: base.html  dashboard.html  login.html  profile.html  rates.html  register.html
(+6 files in other folders)
