[project]
name = "bank"
version = "1.0.0"
description = "Banking website project"
authors = [
    {name = "Denis",email = "s.1ned@yandex.ru"}
]
requires-python = ">=3.14, <4"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "django-environ (>=0.14.0,<0.15.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-ratelimit (>=4.1.0,<5.0.0)",
    "python-telegram-bot (>=22.8,<23.0)",
    "requests (>=2.34.2,<3.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "drf-spectacular (>=0.30.0,<0.31.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "django-redis (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-celery (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short --strict-markers"
pythonpath = ["src","."]
